# pharmacy-app

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  nginx.conf
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/scripts/: post-create.sh  post-start.sh
.github/workflows/: backend-tests.yml  python-app.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  config.py  manage.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  models.py  utils.py
backend/app/cli/: commands.py
backend/app/database/: seeders.py
backend/app/routes/: auth.py  cart.py  payment.py  products.py
backend/app/static/images/products/: aspirin.avif  levothyroxine.avif
backend/app/templates/email/: order_confirmation.html  verify_email.html
backend/migrations/versions/: 017a7e9a4716_add_email_verification.py  3a9b96cc0b45_add_image_url_to_products.py  7b4e1cc7679a_add_orders_table.py  a2fd5b6688b0_initial_migration.py  d8c3dab8e779_add_order_items_table.py
backend/tests/: conftest.py  test_auth.py  test_cart.py  test_payment.py  test_products.py  test_utils.py
frontend/: .dockerignore  Dockerfile  app.json  package-lock.json  package.json  tailwind.config.js
frontend/app/: _layout.jsx  index.jsx
frontend/app/(auth)/: _layout.jsx  sign-in.jsx  sign-up.jsx  verify-email.jsx
frontend/components/: CartItem.jsx  CustomButton.jsx  FormField.jsx  IconButton.jsx  ImageButton.jsx  Item.jsx  ListItem.jsx  OrderItem.jsx  OrderedProductItem.jsx  QuantityPicker.jsx  ToastMessage.jsx
frontend/constants/: icons.js  images.js
frontend/context/: GlobalProvider.js
(+8 files in other folders)
