[project]
name = "UAIM-backend"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask-cors==5.0.0",
    "flask-migrate==4.0.7",
    "flask-sqlalchemy==3.1.1",
    "flask==3.1.0",
    "psycopg2-binary==2.9.10",
    "pyseto>=1.8.0",
    "python-dotenv==1.0.1",
    "werkzeug==3.1.3",
    "flask-mail>=0.10.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
