[project]
name = "UAIM-backend"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask-cors==5.0.0",
    "flask-migrate==4.0.7",
    "flask-sqlalchemy==3.1.1",
    "flask==3.1.0",
    "psycopg2-binary==2.9.10",
    "pyseto>=1.8.0",
    "python-dotenv==1.0.1",
    "werkzeug==3.1.3",
    "flask-mail>=0.10.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "tests/*",
    "**/__init__.py",
    "app/cli/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
show_missing = true
fail_under = 60
